# DiNT

./: CMakeLists.txt  build.sh  environment.yml  meta.yaml
src/: CMakeLists.txt  addrot.F  andersen.F  atomdiatom.F  bootstrap.f  checkhop.F  decocheck.F  diatom.F  dint.F  driver.f  ems.F  hessems.F  orient.F  popnorm.F  ranclu.F  rancol.F  rangaussian.F  ranj.F  ranno.F  ranrot.F  ransamp.F  ranstate.F  rantherm.F  spin.F  stodeco.F  vibwells.F
